--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#container {
+   min-height:100%;
+   position:relative;
+}
 
 body {
 
@@ -5,22 +9,42 @@ body {
 	padding: 0;
 	background-image:url('comedy_stage gray.jpg');
 	background-color:#cccccc;
+	a:link color:#000000;     
+  a:visited color:#000000; 
+  a:hover color:#000000;  
+  a:active color:#000000; 
+	
 }
-#content {
 
-	border-left: 1px solid #000;
-	border-right: 1px solid #000;
-	padding: 0 20px 0 20px;
-	margin: auto;
-	font: 1.5em arial, verdana, sans-serif;
-	width: 960px;
-	height: 100%;
-}
 #leftside {
 
 float: left;
- height: 100%;
- width: 175px;
+height: 100%;
+width: 175px;
 margin-top: 100px;
+padding: 0 15px 0 15px;
+
+}
+#content {
+  
+	a:link color:#000000;     
+  a:visited color:#000000; 
+  a:hover color:#FF00FF;  
+  a:active color:#000000; 
+	padding: 0 20px 0 20px;
+	
+	margin-right:200px;
+  margin-left:200px;
+	font: 1.5em arial, verdana, sans-serif;
+	width: 960px;
+	height: 100%;
+	
+}
+
+#footer {
+
+   bottom:0;
+   width:100%;
+   height:60px;   
 
 }
